# you_study

./: .gitignore  CLAUDE.md  README.md  岗位JD.md
dev-knowledge-agent/: .env.example  .gitignore  pyproject.toml
dev-knowledge-agent/app/: main.py
dev-knowledge-agent/app/api/: chat.py
dev-knowledge-agent/app/core/: config.py  exceptions.py  logging.py  middleware.py
dev-knowledge-agent/app/prompts/: chat.py
dev-knowledge-agent/app/schemas/: chat.py  chunk.py
dev-knowledge-agent/app/scripts/: try_chat.py  try_chat_with_structured_output.py
dev-knowledge-agent/app/services/: chunk_service.py  document_loader.py  embedding_service.py  llm_client.py  llm_service.py  vector_store.py
dev-knowledge-agent/knowledge_base/raw/: fastapi_notes.md  langchain_notes.md  rag_notes.md
dev-knowledge-agent/scripts/: test_middleware.py  try_embedding.py  try_vector_store.py
docs/daily-log/: 2026-06-18.md  README.md
docs/jd-analysis/: 01-jd-cleaned.md  02-role-taxonomy.md  03-tech-stack-matrix.md  04-capability-map.md  README.md
docs/learning-plans/: ai-agent-2-month-roadmap.md
docs/notes/: week1-day1-fastapi-skeleton.md  week1-day3-prompt-engineering.md  week1-day4-structured-output.md  week1-day5-streaming.md  week1-day6-middleware-exception.md  week2-day1-embedding-selection.md  week2-day1-rag-interview-and-engineering.md  week2-day1-rag-overview-detail.md  week2-day1-rag-overview.md  week2-day2-document-loader.md  week2-day3-chunking.md  week2-day4-embedding.md
docs/profile/: user-profile.md
docs/prompts/: interview.md  jd-analysis.md  learning.md  review.md  (+2 more)
(+2 files in other folders)
